CREATE TABLE LABDATABASE.CATEGORIAS (
    CODIGO_CATEGORIA NUMBER NOT NULL,
    NOME_CATEGORIA VARCHAR2(100) NOT NULL,
    DESCRICAO VARCHAR2(255),
    CONSTRAINT CATEGORIAS_PK PRIMARY KEY (CODIGO_CATEGORIA)
);