CREATE TABLE LABDATABASE.FORNECEDORES (
    CNPJ_FORNECEDOR VARCHAR2(14) NOT NULL,
    RAZAO_SOCIAL VARCHAR2(255) NOT NULL,
    NOME_FANTASIA VARCHAR2(255),
    CONSTRAINT FORNECEDORES_PK PRIMARY KEY (CNPJ_FORNECEDOR)
);