CREATE TABLE LABDATABASE.LOCALIZACOES (
    CODIGO_LOCALIZACAO NUMBER NOT NULL,
    NOME_LOCALIZACAO VARCHAR2(100) NOT NULL,
    DESCRICAO VARCHAR2(255),
    CONSTRAINT LOCALIZACOES_PK PRIMARY KEY (CODIGO_LOCALIZACAO)
);