CREATE TABLE LABDATABASE.MOVIMENTACOES (
    CODIGO_MOVIMENTACAO NUMBER NOT NULL,
    CODIGO_PRODUTO NUMBER NOT NULL,
    TIPO_MOVIMENTACAO CHAR(1) NOT NULL, -- 'E' para entrada, 'S' para saída
    QUANTIDADE NUMBER(9,3) NOT NULL,
    DATA_MOVIMENTACAO DATE NOT NULL,
    CNPJ_FORNECEDOR VARCHAR2(14), -- Opcional, para casos de entrada
    MOTIVO VARCHAR2(255),
    NUMERO_NOTA VARCHAR2(50),
    CONSTRAINT MOVIMENTACOES_PK PRIMARY KEY (CODIGO_MOVIMENTACAO),
    CONSTRAINT MOV_PRODUTO_FK FOREIGN KEY (CODIGO_PRODUTO) 
        REFERENCES LABDATABASE.PRODUTOS(CODIGO_PRODUTO),
    CONSTRAINT MOV_FORNECEDOR_FK FOREIGN KEY (CNPJ_FORNECEDOR) 
        REFERENCES LABDATABASE.FORNECEDORES(CNPJ_FORNECEDOR)
);