CREATE TABLE LABDATABASE.PRODUTOS (
    CODIGO_PRODUTO NUMBER NOT NULL,
    DESCRICAO_PRODUTO VARCHAR2(255) NOT NULL,
    QUANTIDADE_ATUAL NUMBER(9,3) NOT NULL,
    QUANTIDADE_MINIMA NUMBER(9,3) NOT NULL,
    QUANTIDADE_MAXIMA NUMBER(9,3) NOT NULL,
    PRECO_CUSTO NUMBER(9,2) NOT NULL,
    PRECO_VENDA NUMBER(9,2) NOT NULL,
    CODIGO_CATEGORIA NUMBER NOT NULL,
    CODIGO_LOCALIZACAO NUMBER NOT NULL,
    DATA_ULTIMA_MOVIMENTACAO DATE,
    CONSTRAINT PRODUTOS_PK PRIMARY KEY (CODIGO_PRODUTO),
    CONSTRAINT PROD_CATEGORIA_FK FOREIGN KEY (CODIGO_CATEGORIA) 
        REFERENCES LABDATABASE.CATEGORIAS(CODIGO_CATEGORIA),
    CONSTRAINT PROD_LOCALIZACAO_FK FOREIGN KEY (CODIGO_LOCALIZACAO) 
        REFERENCES LABDATABASE.LOCALIZACOES(CODIGO_LOCALIZACAO)
);